--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
    <section id="formSection" class="container mt-5 d-flex flex-column justify-content-center align-items-center vh-100">
     <h1 class="mb-5"style="text-align: center;">Registrera användare</h1>
-      <div id="form">
+      <form id="form" onsubmit="onSubmit(event)" novalidate>
          <div class="row">
             <div class="col">
               <input id="firstName" type="text" class="form-control" placeholder="Förnamn">
@@ -32,7 +32,7 @@
 
           <div class="row g-3">
             <div class="col-sm">
-               <input id="year" type="text" class="form-control" placeholder="År" value="">
+               <input id="year" type="text" class="form-control" placeholder="År">
                <p id="year-error" class="ms-3 text-danger" name="year-error"></p>
                <p id="year-warning" class="ms-3 text-warning"></p>
              </div>
@@ -50,16 +50,16 @@
           </div>
 
           <div class="row g-3">
-            <div class="col-sm-7">
+            <div class="col-sm-7 mb-1">
               <input id="row" type="text" class="form-control" placeholder="Gata">
               <p id="row-error" class="ms-3 text-danger mb-4"></p>
             </div>
-            <div class="col-sm">
+            <div class="col-sm mb-1">
               <input id="pnr" type="text" class="form-control" placeholder="postnummer">
               <p id="pnr-error" class="ms-3 text-danger mb-4"></p>
 
             </div>
-            <div class="col-sm mb-4">
+            <div class="col-sm mb-1">
               <input id="ort" type="text" class="form-control" placeholder="Ort">
               <p id="ort-error" class="ms-3 text-danger mb-4"></p>
 
@@ -67,31 +67,31 @@
           </div>
 
           <div class="col">
-            <div class="input-group mb-4">
+            <div class="input-group mb-1">
                <span class="input-group-text" id="form-email">@</span>
-               <input id="email" type="email" class="form-control" placeholder="e-postaddress" novalidation>
+               <input id="email" type="email" class="form-control" placeholder="e-postaddress">
             </div>
                <p id="email-error" class="ms-3 text-danger mb-4"></p>
           </div>
 
           <div class="col">
-            <div class="input-group mb-4">
+            <div class="input-group mb-1">
                <span class="input-group-text" id="form-password">*</span>
-               <input id="password" type="password" class="form-control" placeholder="Lösenord">
+               <input id="password" type="text" class="form-control" placeholder="Lösenord">
              </div>
              <p id="password-error" class="ms-3 text-danger mb-4"></p>
           </div>
 
           <div class="col">
-            <div class="input-group mb-4">
+            <div class="input-group mb-1">
                <span class="input-group-text" id="form-confirm-password">*</span>
-               <input id="confirmPassword" type="password" class="form-control" placeholder="Bekräfta Lösenord">
+               <input id="confirmPassword" type="text" class="form-control" placeholder="Bekräfta Lösenord">
              </div>
              <p id="confirmPassword-error" class="ms-3 text-danger mb-4"></p>
           </div>
 
          <button id="sendBtn" type="submit" class="btn btn-primary">Registrera</button>
-      </div>
+        </form>
    </section>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
    <script src="js/script.js"></script>
