--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
              <p id="confirmPassword-error" class="ms-3 text-danger mb-4"></p>
           </div>
 
-         <button id="sendBtn" type="submit" class="btn btn-primary">Registrera</button>
+         <button id="sendBtn" type="submit" class="btn btn-primary mb-3">Registrera</button>
+         <p id="sendBtn-error" class="ms-1 text-danger mb-4"></p>
+
         </form>
    </section>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
