--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="col">
             <div class="input-group mb-1">
                <span class="input-group-text" id="form-password">*</span>
-               <input id="password" type="text" class="form-control" placeholder="Lösenord">
+               <input id="password" type="password" class="form-control" placeholder="Lösenord">
              </div>
              <p id="password-error" class="ms-3 text-danger mb-4"></p>
           </div>
@@ -85,7 +85,7 @@
           <div class="col">
             <div class="input-group mb-1">
                <span class="input-group-text" id="form-confirm-password">*</span>
-               <input id="confirmPassword" type="text" class="form-control" placeholder="Bekräfta Lösenord">
+               <input id="confirmPassword" type="password" class="form-control" placeholder="Bekräfta Lösenord">
              </div>
              <p id="confirmPassword-error" class="ms-3 text-danger mb-4"></p>
           </div>
